[package]
name = "ozes-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ozes-parser = { version = "0.1.0", git = "https://github.com/pgjbz/ozes-parser.git" }

[features]
publisher = []
consumer = []
