[package]
name = "ozes-connector"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
ozes-parser = { version = "0.1.3", git = "https://github.com/pgjbz/ozes-parser.git" }

[features]
publisher = []
consumer = []
